--- a/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Home/Index.cshtml
+++ b/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Home/Index.cshtml
@@ -3,6 +3,11 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <div class="card">
+        <div class="card-body bg-secondary">
+            <h5 class="card-title text-white">Welcome to Online Test</h5>
+            <p class="card-text text-white">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-outline-warning text-white">Proceed to Test</a>
+        </div>
+    </div>
 </div>
