committed with online test UI design in progress

--- a/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Home/Index.cshtml
+++ b/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
         <div class="card-body bg-secondary">
             <h5 class="card-title text-white">Welcome to Online Test</h5>
             <p class="card-text text-white">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-outline-warning text-white">Proceed to Test</a>
+            <a asp-controller="Test" asp-action="Info" class="btn btn-outline-warning text-white">Proceed to Test</a>
         </div>
     </div>
 </div>
