--- a/Tbh.Online.Test/Tbh.Online.Test.Web/wwwroot/css/site.css
+++ b/Tbh.Online.Test/Tbh.Online.Test.Web/wwwroot/css/site.css
@@ -69,3 +69,11 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+
+textarea.answer-area {
+    width: 100%;
+    height: 200px;
+    border-color: #bfbcbc;
+    resize: none;
+}
