--- a/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Test/Info.cshtml
+++ b/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Test/Info.cshtml
@@ -32,7 +32,7 @@
                     <label for="phone" class="form-label text-dark">Mobile #</label>
                     <input type="tel" class="form-control" id="phone" name="phone">
                 </div>
-                <button class="btn btn-success btn-block text-white mt-5">START TEST</button>
+                <button onclick="questionService.saveExaminee()" class="btn btn-success btn-block text-white mt-5">START TEST</button>
             </div>
         </div>
     </div>
