--- a/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Admin/QuestionCreate.cshtml
+++ b/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Admin/QuestionCreate.cshtml
@@ -50,7 +50,7 @@
                         <label for="question-code-1" class="form-label text-dark">Question Subtext/Code</label>
                         <div class="form-text text-secondary">Enclose code snippet in tild(~)</div>
                         <div class="form-text text-secondary">For indentation use ( ` ). One ( ` ) means one tab space, ( `` ) means two tab space and so on</div>
-                        <div class="form-text text-secondary">For MCQ options use [*] along with option text per line</div>
+                        <div class="form-text text-secondary">For MCQ options use [*] along with option text and pipe(|) at the end of each option</div>
                         <textarea class="answer-area" id="question-code-1" oninput="questionService.onCodeChange(1)"></textarea>
                     </li>
                     <li id="question-code-formatted-1" style="font-family: monospace;" class="list-group-item">
