--- a/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Test/Start.cshtml
+++ b/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Test/Start.cshtml
@@ -2,79 +2,21 @@
     <div class="col-lg-8 col-md-8 col-sm-12 offset-lg-2 offset-md-2">
         <div class="card">
             <div class="card-body bg-light">
-                <h4 class="card-title"><i class="fa fa-keyboard"></i> Software Engineer Online Programming Test</h4>
+                <input type="hidden" id="exam-id" value="ViewBag.ExamId" />
+                <input type="hidden" id="examinee-id" value="ViewBag.ExamineeId" />
+                <h4 class="card-title"><i class="fa fa-keyboard"></i><strong id="title"></strong></h4>
                 <h6>Hosted By: <strong>ASA International</strong></h6>
-                <span class="badge bg-secondary p-2 text-white">Time Remaining: </span>
-                <span style="font-size: 15px;" class="badge bg-danger p-2 text-white font">90:00:00</span>
+                <span class="badge bg-secondary p-2 text-white timer-label-1">Time Remaining: </span>
+                <span style="font-size: 15px;" class="badge bg-danger p-2 text-white font timer-label-2">90:00:00</span>
                 <h5 class="mt-4">Questions</h5>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">1) What would be the output of this program?</li>
-                    <li style="font-family: monospace;" class="list-group-item">
-                        {<br />
-                        "For Loop": {<br />
-                        "prefix": ["for", "for-const"],<br />
-                        "body": ["for (const ${2:element} of ${1:array}) {", "\t$0", "}"],<br />
-                        "description": "A for loop."<br />
-                        }<br />
-                        }
-                    </li>
-                    <li class="list-group-item">
-                        <textarea class="answer-area "></textarea>
-                    </li>
-                </ul>
-                <button class="btn btn-success text-white mt-2 mb-5">SUBMIT</button>
-
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">1) What would be the output of this program?</li>
-                    <li style="font-family: monospace;" class="list-group-item">
-                        {<br />
-                        "For Loop": {<br />
-                        "prefix": ["for", "for-const"],<br />
-                        "body": ["for (const ${2:element} of ${1:array}) {", "\t$0", "}"],<br />
-                        "description": "A for loop."<br />
-                        }<br />
-                        }
-                    </li>
-                    <li class="list-group-item">
-                        <textarea class="answer-area "></textarea>
-                    </li>
-                </ul>
-                <button class="btn btn-success text-white mt-2 mb-5">SUBMIT</button>
-
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">1) What would be the output of this program?</li>
-                    <li style="font-family: monospace;" class="list-group-item">
-                        {<br />
-                        "For Loop": {<br />
-                        "prefix": ["for", "for-const"],<br />
-                        "body": ["for (const ${2:element} of ${1:array}) {", "\t$0", "}"],<br />
-                        "description": "A for loop."<br />
-                        }<br />
-                        }
-                    </li>
-                    <li class="list-group-item">
-                        <textarea class="answer-area "></textarea>
-                    </li>
-                </ul>
-                <button class="btn btn-success text-white mt-2 mb-5">SUBMIT</button>
-
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">1) What would be the output of this program?</li>
-                    <li style="font-family: monospace;" class="list-group-item">
-                        {<br />
-                        "For Loop": {<br />
-                        "prefix": ["for", "for-const"],<br />
-                        "body": ["for (const ${2:element} of ${1:array}) {", "\t$0", "}"],<br />
-                        "description": "A for loop."<br />
-                        }<br />
-                        }
-                    </li>
-                    <li class="list-group-item">
-                        <textarea class="answer-area "></textarea>
-                    </li>
-                </ul>
-                <button class="btn btn-success text-white mt-2 mb-5">SUBMIT</button>
+                <div id="questions-container"></div>
             </div>
         </div>
     </div>
 </div>
+
+<script type="text/javascript">
+    $(document).ready(function () {
+        questionService.getAnswerDetails();
+    });
+</script>
