--- a/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Test/Start.cshtml
+++ b/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Test/Start.cshtml
@@ -1,15 +1,18 @@
-﻿<div class="row">
+﻿<div id="exam-dom" class="row">
     <div class="col-lg-8 col-md-8 col-sm-12 offset-lg-2 offset-md-2">
         <div class="card">
             <div class="card-body bg-light">
-                <input type="hidden" id="exam-id" value="ViewBag.ExamId" />
-                <input type="hidden" id="examinee-id" value="ViewBag.ExamineeId" />
+                <input type="hidden" id="exam-id" value="@ViewBag.ExamId" />
+                <input type="hidden" id="examinee-id" value="@ViewBag.ExamineeId" />
                 <h4 class="card-title"><i class="fa fa-keyboard"></i><strong id="title"></strong></h4>
                 <h6>Hosted By: <strong>ASA International</strong></h6>
+                <span class="badge bg-secondary p-2 text-white">Total Duration: </span>
+                <span id="exam-duration" class="badge bg-danger p-2 text-white">00:00</span>
                 <span class="badge bg-secondary p-2 text-white timer-label-1">Time Remaining: </span>
-                <span style="font-size: 15px;" class="badge bg-danger p-2 text-white font timer-label-2">90:00:00</span>
+                <span id="exam-timer" class="badge bg-danger p-2 text-white font timer-label-2">00:00</span>
                 <h5 class="mt-4">Questions</h5>
                 <div id="questions-container"></div>
+                <button onclick="questionService.completeTest()" class="btn btn-info btn-block text-white mt-2 mb-5">COMPLETE TEST</button>
             </div>
         </div>
     </div>
@@ -18,5 +21,7 @@
 <script type="text/javascript">
     $(document).ready(function () {
         questionService.getAnswerDetails();
+        //setTimeout(function () { questionService.preventExamLeave(); }, 2000);     
+        questionService.preventExamLeave();
     });
 </script>
