committed with points feature added in question set

--- a/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Admin/QuestionCreate.cshtml
+++ b/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Admin/QuestionCreate.cshtml
@@ -34,6 +34,10 @@
                         <div class="float-right">Delete <i style="cursor: pointer;" class="fa fa-times-circle text-danger"></i></div>
                     </li>
                     <li class="list-group-item">
+                        <label for="question-mark-1" class="form-label text-dark">Marks</label>
+                        <input type="number" class="form-control" id="question-mark-1" name="question-mark-1">
+                    </li>
+                    <li class="list-group-item">
                         <label for="type-1" class="form-label text-dark">Question Type</label>
                         <select id="type-1" name="duration" class="form-control" aria-label="Default select example">
                             <option value="1">Explanation</option>
