--- a/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Test/Start.cshtml
+++ b/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Test/Start.cshtml
@@ -22,6 +22,6 @@
     $(document).ready(function () {
         questionService.getAnswerDetails();
         //setTimeout(function () { questionService.preventExamLeave(); }, 2000);     
-        questionService.preventExamLeave();
+        //questionService.preventExamLeave();
     });
 </script>
