--- a/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Test/Info.cshtml
+++ b/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Test/Info.cshtml
@@ -2,6 +2,9 @@
     <div class="col-lg-8 col-md-8 col-sm-12 offset-lg-2 offset-md-2">
         <div class="card">
             <div class="card-body bg-light">
+                <input type="hidden" value="@ViewBag.EC" id="ec" />
+                <input type="hidden" id="exam-id" value="@ViewBag.ExamId" />
+                <input type="hidden" id="exam-status" value="@ViewBag.Status" />
                 <h4 class="card-title"><i class="fa fa-keyboard"></i> Software Engineer Online Programming Test</h4>
                 <h6>Hosted By: <strong>ASA International</strong></h6>
                 <span class="badge bg-secondary p-2 text-white">Date Time: </span>
