--- a/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Admin/Examinees.cshtml
+++ b/Tbh.Online.Test/Tbh.Online.Test.Web/Views/Admin/Examinees.cshtml
@@ -14,6 +14,8 @@
                             <th>Examinee</th>
                             <th>Email</th>
                             <th>Phone</th>
+                            <th>Total Marks</th>
+                            <th>Obtained Marks</th>
                             <th>Status</th>
                             <th></th>
                         </tr>
